--- a/apigateway-itf/pom.xml
+++ b/apigateway-itf/pom.xml
@@ -4,15 +4,21 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.pumahawk.apigateway</groupId>
   <artifactId>apigateway-itf</artifactId>
-  <version>1.0-SNAPSHOT</version>
 
   <name>apigateway-itf</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
+  
+	<parent>
+		<groupId>com.github.pumahawk.apigateway</groupId>
+		<artifactId>apigateway-application</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
   <properties>
+		<java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
