--- a/apigateway-processors/pom.xml
+++ b/apigateway-processors/pom.xml
@@ -1,35 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>apigateway-core</artifactId>
+    <groupId>com.github.pumahawk.apigateway</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-  <artifactId>apigateway-itf</artifactId>
+  <artifactId>apigateway-processors</artifactId>
 
-  <name>apigateway-itf</name>
+  <name>apigateway-processors</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-  
-	<parent>
-		<groupId>com.github.pumahawk.apigateway</groupId>
-		<artifactId>apigateway-core</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
-
   <properties>
 		<java.version>1.8</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-gateway-server</artifactId>
-        <version>3.0.0</version>
-    </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
@@ -41,6 +32,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>apigateway-itf</artifactId>
+			<version>${project.version}</version>
+		</dependency>
   </dependencies>
 
   <build>
