--- a/apigateway-web/pom.xml
+++ b/apigateway-web/pom.xml
@@ -9,7 +9,7 @@
 	
 	<parent>
 		<groupId>com.github.pumahawk.apigateway</groupId>
-		<artifactId>apigateway-application</artifactId>
+		<artifactId>apigateway-core</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
