--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>apigateway-web</module>
 		<module>apigateway-itf</module>
 		<module>apigateway-processors</module>
+    	<module>apigateway-extension-clone-session</module>
   </modules>
 
 </project>
