--- a/apigateway-processors/pom.xml
+++ b/apigateway-processors/pom.xml
@@ -49,6 +49,12 @@
       <artifactId>spring-cloud-starter-gateway</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
